--- a/website/pages/docs/e2e/benchmark.mdx
+++ b/website/pages/docs/e2e/benchmark.mdx
@@ -1,4 +1,4 @@
-import { Tabs, Tab } from 'nextra-theme-docs'
+import { Tabs } from 'nextra/components'
 
 ## Outline
 Benchmark your backend server with e2e test functions.
@@ -26,7 +26,7 @@ If you want to pre-exprience the benchmark program utliizng the e2e test functio
     "Benchmark Main Program",
     "Benchmark Servant Program",
   ]}>
-  <Tab>
+  <Tabs.Tab>
 ```typescript filename="test/benchmark/index.ts" showLineNumbers {76-94}
 import { DynamicBenchmarker } from "@nestia/benchmark";
 import cliProgress from "cli-progress";
@@ -149,8 +149,8 @@ main().catch((exp) => {
   process.exit(-1);
 });
 ```
-  </Tab>
-  <Tab>
+  </Tabs.Tab>
+  <Tabs.Tab>
 ```typescript filename="test/benchmark/servant.ts" showLineNumbers
 import { DynamicBenchmarker } from "@nestia/benchmark";
 
@@ -168,7 +168,7 @@ DynamicBenchmarker.servant({
   process.exit(-1);
 });
 ```
-  </Tab>
+  </Tabs.Tab>
 </Tabs>
 
 To compose the benchmark program of `@nestia/benchmark` on your backend application, you have to create two executable TypeScript programs; the main program and the servant program. 
@@ -193,7 +193,7 @@ Project                | Main | Servant | Report
     "Test Function #2",
     "Test Function #3",
   ]}>
-  <Tab>
+  <Tabs.Tab>
 ```typescript filename="test/features/api/bbs/test_api_bbs_article_create.ts" showLineNumbers
 import { RandomGenerator, TestValidator } from "@nestia/e2e";
 import { v4 } from "uuid";
@@ -233,8 +233,8 @@ export async function test_api_bbs_article_create(
   TestValidator.equals("created")(stored)(read);
 }
 ```
-  </Tab>
-  <Tab>
+  </Tabs.Tab>
+  <Tabs.Tab>
 ```typescript filename="test/features/api/bbs/test_api_bbs_article_update.ts" showLineNumbers
 import { RandomGenerator, TestValidator } from "@nestia/e2e";
 import { v4 } from "uuid";
@@ -299,8 +299,8 @@ export async function test_api_bbs_article_update(
   );
 }
 ```
-  </Tab>
-  <Tab>
+  </Tabs.Tab>
+  <Tabs.Tab>
 ```typescript filename="test/features/api/bbs/test_api_bbs_article_index_search.ts" showLineNumbers
 import { ArrayUtil, RandomGenerator, TestValidator } from "@nestia/e2e";
 
@@ -370,7 +370,7 @@ export async function test_api_bbs_article_index_search(
   });
 }
 ```
-  </Tab>
+  </Tabs.Tab>
 </Tabs>
 
 Developing e2e test functions are very easy. Just make e2e based test function utilizing `@nestia/sdk` generated SDK library, and exports the function with `test_` prefixed name (If you've configured another `prefix` property in the benchmark main program, just follow the configuration).
